# nginY

./: CMakeLists.txt  README.md  installation.sh  nginy.conf  nginy.prod.conf.example
deploy/: nginY.service
src/: FileHandler.cpp  FileHandler.h  FileReader.cpp  FileReader.h  ProxyHandler.cpp  ThreadPool.cpp  ThreadPool.h  WebServer.cpp  WebServer.h  main.cpp
src/core/: ThreadPool.h  WebServer.cpp  WebServer.h  main.cpp
src/network/: ProxyConnection.cpp  ProxyConnection.h  ProxyHandler.cpp  ProxyHandler.h  SNIContext.cpp  SNIContext.h  SSLContext.cpp  SSLContext.h  WebServer.cpp  WebServer.h
src/network/connections/: Connection.h  HttpConnection.h  HttpsConnection.h
src/network/socket/: PosixSocketFactory.h  SocketFactory.h
src/utilIO/: ProxyConfig.cpp  ProxyConfig.h
src/utils/: FileReader.cpp  FileReader.h  LinkedBlockingQueue.h  Logger.cpp  Logger.h  ServerConfig.cpp  ServerConfig.h  StaticResourceManager.cpp  StaticResourceManager.h
tests/core/: test_Threadpool.cpp  test_WebServer.cpp
tests/network/connections/: gTestConnection.cpp  gTestConnectionParser.h  test_HttpConnection.cpp
tests/network/socket/: GTestSocketFactory.h  gTestSocketFactory.h  test_PosixSocketFactory.cpp
